Altura de vmax para porcentagem

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       overflow: hidden;
     }
     iframe {
-      height: calc(100vmax + 50px);
+      height: calc(100% + 50px);
       max-width: 56.25vmax;
       width: 100vmin;
       display: block;
