--- a/index.html
+++ b/index.html
@@ -23,33 +23,26 @@
       margin: 0;
       padding: 0;
     }
-    #figma-container {
-      height: 100%;
-      width: 100%;
-      background-color: black;
-      overflow: hidden;
+    body {
+      display: flex;
+      justify-content: center;
     }
-    iframe {
-      height: calc(100% + 50px);
-      max-width: 56.25vmax;
-      width: 100vmin;
-      display: block;
-      margin: auto;
-      border: none;
-    }
+    /* Tela de início */
     #inicio {
       position: fixed;
       left: 0;
       right: 0;
       top: 0;
       bottom: 0;
-      background-color: #272727;
+      background-color: #5B5B5B;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       font-family: 'Arial', sans-serif;
       padding: 2rem;
+      /* display: none; */
+      z-index: 5;
     }
     #inicio p {
       margin: 2rem;
@@ -57,14 +50,38 @@
       color: #fff;
     }
     button {
-      background-color: #fff;
-      color: #272727;
+      background-color: black;
+      color: #fff;
       border: none;
-      padding: 1rem;
+      padding: 1.5em;
       font-size: 1rem;
       font-weight: 700;
       margin: 10px;
+      width: 17.5em;
+      max-width: 90%;
     }
+    /* Prototipo */
+    #figma-container {
+      height: 100%;
+      background-color: #5B5B5B;
+      overflow: hidden;
+      position: relative;
+    }
+    .helper {
+      height: 100%;
+      width: auto;
+      max-width: 100%;
+    }
+    iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: calc(100% + 49px);
+      width: 100%;
+      border: none;
+    }
+
+
   </style>
 
 </head>
@@ -72,26 +89,22 @@
 <body>
   <div id="inicio">
     <button id="iniciar">
-      Iniciar em tela cheia
+      Abrir em tela cheia (Android)
     </button>
     <button id="iniciar-normal">
-      Iniciar normal
+      Abrir no browser
     </button>
-    <p>
-      Se você estiver usando Android, seu dispositivo entrará em modo de tela cheia.
-    </p>
   </div>
-  <div id="figma-container" class="d-none">
-    <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FbFRQqUcRINxn5T8dchUp9t%2FProt%25C3%25B3tipo-Naveg%25C3%25A1vel-Grupo-01-5a-Forma%25C3%25A7%25C3%25A3o-em-UX%3Fnode-id%3D564%253A931%26scaling%3Dscale-down%26page-id%3D526%253A656" id="prototipo"></iframe>
+  <div id="figma-container">
+    <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FbFRQqUcRINxn5T8dchUp9t%2FProt%25C3%25B3tipo-Naveg%25C3%25A1vel-Grupo-01-5a-Forma%25C3%25A7%25C3%25A3o-em-UX%3Fnode-id%3D1229%253A910%26scaling%3Dscale-down%26page-id%3D526%253A656" id="prototipo"></iframe>
+    <img class="helper" src="helper.png" />
   </div>
-  <!-- <script src="js/scripts.js"></script> -->
-
 
   <script>
 
   var normal = document.getElementById("iniciar-normal");
   normal.addEventListener("click", function() {
-    var figma = document.getElementById("figma-container");
+    var figma = document.getElementById("prototipo");
     var inicio = document.getElementById("inicio");
     inicio.style.display = "none";
   }, false);
@@ -99,7 +112,7 @@
   var goFS = document.getElementById("iniciar");
   goFS.addEventListener("click", function() {
     toggleFullScreen();
-    var figma = document.getElementById("figma-container");
+    var figma = document.getElementById("prototipo");
     var inicio = document.getElementById("inicio");
     inicio.style.display = "none";
 
