--- a/index.html
+++ b/index.html
@@ -723,6 +723,9 @@
                                 Essa medida já acontece independentemente do Maio Amarelo, como medida do Detran-SP para
                                 tornar o trânsito mais seguro. -->
                                 <BR>
+                                    <BR>                                        
+                                        <img src="https://kimurawill.github.io/alesp/referencia.png" width="100%">
+                                <BR>
                                 <BR>
                                     
                                     <h3>Teste caixa baixa</h3>
