--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta name="description"
         content="Políticas públicas, ações educativas e aprovação de leis são algumas das iniciativas práticas do Parlamento Paulista para reduzir o número de acidentes no estado de São Paulo" />
     <meta property="fb:app_id" content="201815157200265" />
-    <meta property="og:title" content="Maio Amarelo: Alesp incentiva a conscientização no trânsito" />
+    <meta property="og:title" content="Teste: Tamanhos de Fontes para Infográficos" />
     <meta property="og:url" content="https://www.al.sp.gov.br/noticia/?id=475963" />
     <meta property="og:description"
         content="Políticas públicas, ações educativas e aprovação de leis são algumas das iniciativas práticas do Parlamento Paulista para reduzir o número de acidentes no estado de São Paulo" />
@@ -54,7 +54,7 @@
     <script src="https://www.al.sp.gov.br/_assets/js/globals.js"></script>
     <link type='text/css' rel='stylesheet' href='https://www.al.sp.gov.br/_assets/css/fotorama/fotorama-noticias.css'>
     <link type='text/css' rel='stylesheet' href='https://www.al.sp.gov.br/_assets/css/noticias.css' />
-    <title>Maio Amarelo: Alesp incentiva a conscientização no trânsito</title>
+    <title>Teste: Tamanhos de Fontes para Infográficos</title>
 </head>
 
 <body id="id-body">
@@ -606,18 +606,17 @@
                         } 
                     </script>
 
-                    <h2>Maio Amarelo: Alesp incentiva a conscientização no trânsito</h2>
+                    <h2>Teste: Tamanhos de Fontes para Infográficos</h2>
                     <div class="data_noticia">
 
-                        Políticas públicas, ações educativas e aprovação de leis são algumas das iniciativas práticas do
-                        Parlamento Paulista para reduzir o número de acidentes no estado de São Paulo
+                        Textos em diferentes tamanhos (considerando largura de imagem de 856px) para verificar leitura desktop x mobile
 
                         <hr>
-                        <b>21/05/2024 10:50 </b>
+                        <b>25/11/2024 18:50 </b>
 
-                        | Prevenção
+                        | Teste
 
-                        | Daiana Rodrigues - Foto: Agência Alesp
+                        | William
 
 
 
@@ -646,30 +645,14 @@
                             <div align="left" class="fotorama" data-width="100%" data-ratio="3/2" data-nav="th umbs"
                                 data-arrows="always" data-thumbheight="48" data-allowfullscreen="true"
                                 data-autoplay="true">
+                              
 
+                                <img src="https://kimurawill.github.io/alesp/referencia.png"
+                                    data-full="https://kimurawill.github.io/alesp/referencia.png"
+                                    data-caption="Dimensões do arquivo e teste com fontes de tamanhos variados<a style='float:right;color:#ccc' href='https://www3.al.sp.gov.br/repositorio/noticia/N-05-2024/fg325302.png' target=_blank><i class='bi bi-zoom-in'></i> Clique para ver a imagem </a>"
+                                    alt="Dimensões do arquivo e teste com fontes de tamanhos variados<a style='float:right;color:#ccc' href='https://www3.al.sp.gov.br/repositorio/noticia/N-05-2024/fg325302.png' target=_blank><i class='bi bi-zoom-in'></i> Clique para ver a imagem </a>">
 
-                                <img src="https://www3.al.sp.gov.br/repositorio/noticia/N-05-2024/fg325302.png"
-                                    data-full="https://www3.al.sp.gov.br/repositorio/noticia/N-05-2024/fg325302.png"
-                                    data-caption="Maio Amarelo: movimento de segurança no trânsito<a style='float:right;color:#ccc' href='https://www3.al.sp.gov.br/repositorio/noticia/N-05-2024/fg325302.png' target=_blank><i class='bi bi-zoom-in'></i> Clique para ver a imagem </a>"
-                                    alt="Maio Amarelo: movimento de segurança no trânsito<a style='float:right;color:#ccc' href='https://www3.al.sp.gov.br/repositorio/noticia/N-05-2024/fg325302.png' target=_blank><i class='bi bi-zoom-in'></i> Clique para ver a imagem </a>">
-
-
-                                <img src="https://www3.al.sp.gov.br/repositorio/noticia/N-05-2024/fg325239.png"
-                                    data-full="https://www3.al.sp.gov.br/repositorio/noticia/N-05-2024/fg325239.png"
-                                    data-caption="Dados dos óbitos - janeiro a abril de 2023 e 2024<a style='float:right;color:#ccc' href='https://www3.al.sp.gov.br/repositorio/noticia/N-05-2024/fg325239.png' target=_blank><i class='bi bi-zoom-in'></i> Clique para ver a imagem </a>"
-                                    alt="Dados dos óbitos - janeiro a abril de 2023 e 2024<a style='float:right;color:#ccc' href='https://www3.al.sp.gov.br/repositorio/noticia/N-05-2024/fg325239.png' target=_blank><i class='bi bi-zoom-in'></i> Clique para ver a imagem </a>">
-
-
-                                <img src="https://www3.al.sp.gov.br/repositorio/noticia/N-05-2024/fg325240.png"
-                                    data-full="https://www3.al.sp.gov.br/repositorio/noticia/N-05-2024/fg325240.png"
-                                    data-caption="Acidentes não fatais - jan. a abril de 2023 e 2024<a style='float:right;color:#ccc' href='https://www3.al.sp.gov.br/repositorio/noticia/N-05-2024/fg325240.png' target=_blank><i class='bi bi-zoom-in'></i> Clique para ver a imagem </a>"
-                                    alt="Acidentes não fatais - jan. a abril de 2023 e 2024<a style='float:right;color:#ccc' href='https://www3.al.sp.gov.br/repositorio/noticia/N-05-2024/fg325240.png' target=_blank><i class='bi bi-zoom-in'></i> Clique para ver a imagem </a>">
-
-
-                                <img src="https://www3.al.sp.gov.br/repositorio/noticia/N-05-2024/fg325241.png"
-                                    data-full="https://www3.al.sp.gov.br/repositorio/noticia/N-05-2024/fg325241.png"
-                                    data-caption="Maio Amarelo: movimento de segurança no trânsito<a style='float:right;color:#ccc' href='https://www3.al.sp.gov.br/repositorio/noticia/N-05-2024/fg325241.png' target=_blank><i class='bi bi-zoom-in'></i> Clique para ver a imagem </a>"
-                                    alt="Maio Amarelo: movimento de segurança no trânsito<a style='float:right;color:#ccc' href='https://www3.al.sp.gov.br/repositorio/noticia/N-05-2024/fg325241.png' target=_blank><i class='bi bi-zoom-in'></i> Clique para ver a imagem </a>">
+                              
 
                             </div>
 
